// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EntityId parse from entityId string -1 1`] = `"Invalid entity ID \\"-1\\""`;

exports[`EntityId parse from entityId string -1.-1.-1 1`] = `"Invalid entity ID \\"-1.-1.-1\\""`;

exports[`EntityId parse from entityId string 0.1.2.3 1`] = `"Invalid entity ID \\"0.1.2.3\\""`;

exports[`EntityId parse from entityId string 0.1.x 1`] = `
Array [
  "Invalid parameter: demo param",
]
`;

exports[`EntityId parse from entityId string 0x 1`] = `
Array [
  "Invalid parameter: from",
]
`;

exports[`EntityId parse from entityId string 0x00000001000000000000000200000000000000034 1`] = `
Array [
  "Invalid parameter: from",
]
`;

exports[`EntityId parse from entityId string 0x010203 1`] = `
Array [
  "Invalid parameter: from",
]
`;

exports[`EntityId parse from entityId string 0x2540be3f6001fffffffffffff001fffffffffffff 1`] = `
Array [
  "Invalid parameter: from",
]
`;

exports[`EntityId parse from entityId string 0x10000000000000000000000000000000000000000 1`] = `
Array [
  "Invalid parameter: from",
]
`;

exports[`EntityId parse from entityId string a 1`] = `"Invalid entity ID \\"a\\""`;

exports[`EntityId parse from entityId string a.b.c 1`] = `"Invalid entity ID \\"a.b.c\\""`;

exports[`EntityId parse from entityId string null 1`] = `"Null entity ID"`;

exports[`EntityId parse from entityId string undefined 1`] = `"Null entity ID"`;
